--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,5 +10,10 @@
   },
   "devDependencies": {
     "vite": "^7.1.2"
+  },
+  "dependencies": {
+    "axios": "^1.11.0",
+    "sweetalert2": "^11.22.3",
+    "xlsx": "^0.18.5"
   }
 }
